try use matrix and merge generators

--- a/bootstrap/clusters/rancher-desktop-secret.yaml
+++ b/bootstrap/clusters/rancher-desktop-secret.yaml
@@ -5,6 +5,11 @@ metadata:
   namespace: argocd
   labels:
     argocd.argoproj.io/secret-type: cluster
+    integration: "true"
+    room: "1"
+  annotations:
+    revision: "HEAD"
+    git-path: "testing"
 type: Opaque
 stringData:
   name: rancher-desktop
